fix body overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,9 +8,18 @@
   --main-medium-gray: #342927;
 }
 
-body {
+html, body {
   overflow-x: hidden !important;
-} 
+  max-width: 100vw !important;
+}
+
+html {
+  overflow-x: hidden !important;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden !important;
+}
 
 /* Expertise title image wrapper - align right on desktop */
 @media (min-width: 768px) {
